Chore: fix weird spacing

--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -258,7 +258,7 @@
           background-color: white;
           border-left: 1px solid #ccc;
           color: #000;
-          padding: 0 6px;
+          padding: 0 8px;
           font-family: 'neuzeit_grotesk_regular';
           font-size: 12px;
         }
